1.3.3 unreleased
================

* Fix XHTML error in criterion_edit_form.cpt
  [davisagli]

1.3.2 2009-05-20
================

* Added proper multi-lingual handling to the reference criterion. It should
  only show referenced content in the same or the neutral language if the
  uid catalog is language aware.
  [hannosch]

1.3.1 2009-04-28
================

* Made it possible to set an empty value to a topic text field. This closes
  http://dev.plone.org/plone/ticket/7324.
  [dunlapm]

1.3.0 2009-03-11
================

* Add support for generating iCal feeds for topics.
  This refs http://plone.org/products/plone/roadmap/246.
  [witsch]

* Add view for rendering events as an iCal feed as proposed by PLIP 246,
  http://plone.org/products/plone/roadmap/246.
  [witsch]

* Remove all code related to auto-sorting / auto-ordering folder as proposed
  by PLIP 241, http://plone.org/products/plone/roadmap/241.
  [witsch]

* Made the relative path criterion less prone for funky Acquisition chains.
  This refs http://dev.plone.org/plone/ticket/7686.
  [hannosch, maurits]

1.2.7 2009-01-30
================

* Don't assume regular (non-btree) folders for next/previous support.
  [witsch]

* Made Flash files display inline since Flash 10 requires this.  Fixes
  http://dev.plone.org/plone/ticket/8624
  [alecm]

1.2.6 2008-10-06
==================

* Fixed the tidy validation which errored out and rasied the wrong error.
  This closes https://dev.plone.org/plone/ticket/8243.
  [jlagarde, garbas, calvinhp]

* Avoid acquiring getText from parent objects in atct_album_view. This refs
  http://dev.plone.org/plone/ticket/8190.
  [hannosch]

* Already quoted characters in a "Link" url should not be quoted again
  on edit. This closes http://dev.plone.org/plone/ticket/8336.
  [witsch]

* Removed parameters that has to be controlled through CSS from 
  atct_topic_view.pt. This closes http://dev.plone.org/plone/ticket/6803
  [spliter]
