@@ -297,15 +297,15 @@ class ConstrainTypesMixin:
         if context is None:
             context = self
 
-        result = []
         portal_types = getToolByName(self, 'portal_types')
         myType = portal_types.getTypeInfo(self)
-        if myType is not None:
-            for contentType in portal_types.listTypeInfo(context):
-                if myType.allowType( contentType.getId() ):
-                    result.append( contentType )
-        else:
             result = portal_types.listTypeInfo()
+        # Don't give parameter context to portal_types.listTypeInfo(). If we do that,
+        # listTypeInfo will execute t.isConstructionAllowed(context) for each content type
+        # in portal_types.
+        # The isConstructionAllowed should be done only on allowed types.
+        if myType is not None:
+            return [t for t in result if myType.allowType(t.getId()) and t.isConstructionAllowed(context)]
 
         return [ t for t in result if t.isConstructionAllowed(context) ]
 
